v3.10.4 (XXXX-XX-XX)
--------------------

* BTS-1193: Fix for schema update. When removing a field and then inserting a
  new field into the schema, previously, both old and new schema would be
  merged, meaning it would maintain the old field and add the new one.

* Fixed issue #18053: Computed Values become null when Schema is modified.

* Set the cache_oblivious option of jemalloc to `false` by default. This helps
  to save 4096 bytes of RAM for every allocation which is at least 16384 bytes
  large. This is particularly beneficial for the RocksDB buffer cache.

* Added startup option `--javascript.user-defined-functions`.
  This option controls whether JavaScript user-defined functions (UDFs) can be
  used in AQL queries. The option defaults to `true`. The option can be set to
  `false` to disallow using JavaScript UDFs from inside AQL queries.
  In that case, a parse error will be thrown when trying to run a query that
  invokes a UDF.

* Allowing enabling/disabling supervision maintenance mode also via followers in
  active failover mode. Previously the supervision maintenance mode could only
  be enabled/disabled by making a call to the active failover leader.

* BTS-266: When starting up a cluster without `--cluster.force-one-shard`,
  creating a database and then restarting the cluster with the startup option
  `--cluster.force-one-shard` set to true, when the formerly created database
  has more than one shard, but the flag is set to true, this could lead to
  arangosearch's analyzers to use optimizations that should not be used if not
  in a single shard mode. For this not to happen, the verification of the
  parameter being true as a condition to run optimizations was removed.

* Activate RDB_CoveringIterator and use it for some geo index queries.
  This speeds up and simplifies geo queries with geo index which do not use
  GEO_DISTANCE.


v3.10.3 (2023-01-23)
--------------------
