@@ -293,6 +293,7 @@ OperationResult GraphOperations::editEdgeDefinition(
 
   SingleCollectionTransaction trx(ctx(), StaticStrings::GraphCollection,
                                   AccessMode::Type::WRITE);
+  trx.addHint(transaction::Hints::Hint::GLOBAL_MANAGED);
 
   res = trx.begin();
 
@@ -909,6 +910,7 @@ OperationResult GraphOperations::updateVertex(const std::string& collectionName,
   transaction::Options trxOptions;
   trxOptions.waitForSync = waitForSync;
   transaction::Methods trx(ctx(), {}, writeCollections, {}, trxOptions);
+  trx.addHint(transaction::Hints::Hint::GLOBAL_MANAGED);
 
   Result tRes = trx.begin();
 
@@ -930,6 +932,7 @@ OperationResult GraphOperations::replaceVertex(
   transaction::Options trxOptions;
   trxOptions.waitForSync = waitForSync;
   transaction::Methods trx(ctx(), {}, writeCollections, {}, trxOptions);
+  trx.addHint(transaction::Hints::Hint::GLOBAL_MANAGED);
 
   Result tRes = trx.begin();
 
@@ -957,6 +960,7 @@ OperationResult GraphOperations::createVertex(const std::string& collectionName,
   std::vector<std::string> writeCollections;
   writeCollections.emplace_back(collectionName);
   transaction::Methods trx(ctx(), {}, writeCollections, {}, trxOptions);
+  trx.addHint(transaction::Hints::Hint::GLOBAL_MANAGED);
 
   Result res = trx.begin();
 
@@ -1018,6 +1022,7 @@ OperationResult GraphOperations::removeEdgeOrVertex(
   transaction::Options trxOptions;
   trxOptions.waitForSync = waitForSync;
   transaction::Methods trx{ctx(), {}, trxCollections, {}, trxOptions};
+  trx.addHint(transaction::Hints::Hint::GLOBAL_MANAGED);
 
   res = trx.begin();
 
